added models, migrations for Users and Companies

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header>
+    <h1> Welcome to SeedMe</h1>
+  </header>
+<nav>
 
+</nav>
 <%= yield %>
 
 </body>
