--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -1,6 +1,7 @@
 <div class="companies">
   <h2 class="company-name"> <%= link_to company.name, user_company_path(company.user, company) %></h2>
   <h3 class="company-user"> <%= link_to company.user.username, user_path(company.user) %></h3>
+  <iframe width="420" height="315" src= <%= company.pitch_url %> frameborder="0" allowfullscreen></iframe>
   <p class="pitch-text">
     <%= company.pitch_text %>
   </p>
