added show view for company page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1> Welcome to SeedMe</h1>
+    <h1 class = "header-logo"> Welcome to SeedMe</h1>
   </header>
 <nav>
 
