--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,33 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+h1 {
+  text-align: center;
+}
+.header-nav{
+  text-align: center;
+}
+.header-nav li{
+  display: inline-block;
+  margin: auto;
+}
+
+nav {
+  float: left;
+  margin: 0 auto;
+}
+nav a {
+  display: block;
+  text-align: center;
+  margin-left: 10px;
+}
+nav p {
+  text-align: center;
+}
+
+.companies {
+  float: right;
+  width: 75%;
+}
+
+#new_company {
+  margin-left: 30%;
+  width: 300px;
+}
