--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,7 +1,15 @@
-<%= simple_form_for @company do |f| %>
-  <%= f.input :name %>
-  <%= f.input :industry %>
-  <%= f.input :pitch_text %>
-  <%= f.input :pitch_url %>
-  <%= f.button :submit %>  
+<%= form_for [@user, @company] do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.label :industry %>
+  <%= f.text_field :industry %>
+
+  <%= f.label :pitch_url, "Video Link"%>
+  <%= f.text_field :pitch_url %>
+
+  <%= f.label :pitch_text %>
+  <%= f.text_area :pitch_text %>
+  
+  <%= f.submit %>
 <% end %>
