--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,5 +1,5 @@
 <%= render @company %>
 <ul class = "edit-delete">
-    <li><%= link_to "Edit", edit_user_company_path(@user, @company), class: "edit-link"%></li>
+    <li><%= link_to "Edit Company", edit_user_company_path(@user, @company), class: "edit-link"%></li>
     <li><%= link_to "Delete Company", user_company_path(@user, @company), method: :delete %></li>
 </ul>
