--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,7 +2,7 @@ h1 {
   text-align: center;
 }
 header{
-  border-bottom:
+  background: #D1DBBD;
 }
 .header-nav{
   text-align: center;
@@ -49,9 +49,10 @@ nav p {
 }
 
 .companies {
-  float: left;
-  width: 85%;
-  margin-left: 20px;
+
+  width: 50%;
+  margin: 0 auto;
+  border-bottom: 5px solid #91AA9D;
 }
 .edit-delete{
   position:relative;
