added fonts, logic to see if user can delete company

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,3 +1,4 @@
+<h2><%= flash[:notice] %></h2>
 <%= render @company %>
 <ul class = "edit-delete">
     <li><%= link_to "Edit Company", edit_user_company_path(@user, @company), class: "edit-link"%></li>
