--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,23 +1,39 @@
+@import url(http://fonts.googleapis.com/css?family=Josefin+Sans);
+
+body{
+font-family: 'Josefin Sans', sans-serif;
+margin: 0;
+margin-top: -20px;
+padding: 0;
+}
+
 h1 {
   text-align: center;
 }
 header{
+  float: left;
+  min-width: 100%;
   background: #D1DBBD;
+  border-bottom: 3px solid #193441;
+  margin-bottom: 20px;
 }
 div.wrapper h2{
   text-align: center;
 }
 .header-nav{
   text-align: center;
+  margin-bottom: 1px;
 }
+
+
 .header-nav li{
   display: inline-block;
   margin: auto;
   border-radius: 4px;
   font-family: Arial;
-  font-size: 20px;
+  font-size: 18px;
   background: #3E606F;
-  padding: 10px 20px 10px 20px;
+  padding: 8px 16px 8px 16px;
   border: solid #91AA9D 2px;
   text-decoration: none;
 }
@@ -49,10 +65,11 @@ nav a {
 }
 nav p {
   text-align: center;
+  color: #ffffff;
+  font-size: 1.2em;
 }
 /*Company Info*/
-.companies {
-
+.companies, .users {
   width: 50%;
   margin: 0 auto;
   border-bottom: 5px solid #91AA9D;
@@ -60,7 +77,14 @@ nav p {
 
 .company-name{
   text-align: center;
+  margin-top: 5px;
 }
+
+
+.company-description{
+  text-decoration: underline;
+}
+
 .edit-delete{
   position:relative;
   float: right;
@@ -82,11 +106,20 @@ nav p {
 }
 /*Forms */
 
-#new_company label, #new_company input {
+#new_company input, #new_company textarea {
   display: block;
-  margin-left: 30%;
-  width: 300px;
+  width: 20%;
+  margin: auto;
+  margin-bottom: 10px;
 }
+
+#new_company label{
+  display: block;
+  text-align: left;
+  width: 20%;
+  margin: auto;
+}
+
 .edit_company{
   margin-left: 25%;
 }
@@ -94,9 +127,9 @@ nav p {
 .edit_company label, .edit_company input, #company_pitch_text{
   display: block;
 }
-.edit_company input{
 
-}
-.sign-in, .sign-up input {
+.sign-in input, .sign-up input {
   display: block;
+  width: 15%;
+  margin: auto;
 }
