--- a/app/views/users/sign_in.html.erb
+++ b/app/views/users/sign_in.html.erb
@@ -2,5 +2,5 @@
 <%= form_tag("/sign_in", method: "post", class: "sign-in") do %>
   <input type="text" name="username" placeholder="username" value="<%= session[:user] %>" />
   <input type="password" name="password" placeholder="password" />
-  <input type="submit" value="Sign in" />
+  <input type="submit" value="Sign In" />
 <% end %>
