tweaked styling and logic for login/logout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,13 @@
   <header>
     <h1 class = "header-logo"> Welcome to SeedMe</h1>
     <ul class = "header-nav">
-      <li> <%= link_to "Home", root_url %> </li>
-      <li> <%= link_to "Sign In", "/sign_in" %></li>
-      <li> <%= link_to "Sign Out", "/sign_out" %></li>
-      <li> <%= link_to "Sign Up", "/sign_up" %> </li>
+        <li> <%= link_to "Home", root_url %> </li>
+      <% if session[:user] %>
+        <li> <%= link_to "Sign Out", "/sign_out" %></li>
+      <% else %>
+        <li> <%= link_to "Sign In", "/sign_in" %></li>
+        <li> <%= link_to "Sign Up", "/sign_up" %> </li>
+      <% end %>
     </ul>
   </header>
   <div class = "wrapper">
