--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,10 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Josefin+Sans);
 
 body{
-font-family: 'Josefin Sans', sans-serif;
-margin: 0;
-margin-top: -20px;
-padding: 0;
+  font-family: 'Josefin Sans', sans-serif;
+  margin: 0;
+  margin-top: -20px;
+  padding: 0;
+  line-height: 1.4em;
 }
 
 .flash {
