--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -1,5 +1,9 @@
 <div class="companies">
   <h2 class="company-name"> <%= link_to company.name, user_company_path(company.user, company) %></h2>
+  <%= link_to user_company_upvote_path(session[:user]["id"], company), method: :put do %>
+      Likes
+    <%= company.get_upvotes.size %>
+  <% end %>
   <h3 class="company-user"> Founder: <%= link_to "#{company.user.first_name} #{company.user.last_name}", user_path(company.user) %></h3>
   <iframe width="420" height="315" src= <%= company.pitch_url %> frameborder="0" allowfullscreen></iframe>
   <p class="pitch-text">
