--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -1,7 +1,7 @@
 <div class="companies">
   <h2 class="company-name"> <%= link_to company.name, user_company_path(company.user, company) %></h2>
 
-  <%= link_to user_company_upvote_path(session[:user]["id"], company), method: :put do %>
+  <%= link_to user_company_upvote_path(current_user, company), method: :put do %>
       Likes
     <%= company.get_upvotes.size %>
   <% end %>
