--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,12 +32,12 @@ div.wrapper h2{
 }
 
 
-.header-nav li{
+.header-nav a{
   display: inline-block;
   margin: auto;
   border-radius: 4px;
   font-family: Arial;
-  font-size: 18px;
+  font-size: 15px;
   background: #3E606F;
   padding: 8px 16px 8px 16px;
   border: solid #91AA9D 2px;
@@ -133,9 +133,15 @@ nav p {
 .edit_company label, .edit_company input, #company_pitch_text{
   display: block;
 }
-
-.sign-in input, .sign-up input {
-  display: block;
-  width: 15%;
+.field {
+  width: 10%;
   margin: auto;
+}
+input[value="Log In"]{
+    width: 12em;
+    margin-left: 52.3em;
+  }
+input[value="Sign Up"]{
+  width: 12em;
+  margin-left: 52.3em;
 }
