--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,7 +19,7 @@
   <%= f.password_field :password, placeholder: "Password" %>
 </div>
 <div class="field">
-  <%= f.label :password_confirmation %><br />
+  <%= f.label :password_confirmation, "Confirm" %><br />
   <%= f.password_field :password_confirmation, placeholder: "Confirm Password" %>
 </div>
 <div class="field">
