--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,3 @@
-
-
 body{
   font-family: 'Josefin Sans', sans-serif;
   margin: 0;
@@ -109,6 +107,16 @@ nav p {
   padding: 5px;
   background: #3E606F;
   text-decoration: none;
+}
+
+.favorites {
+  width: 20%;
+  margin: auto;
+  list-style: circle;
+}
+
+.favorite-name{
+  text-align: left;
 }
 /*Forms */
 
