--- a/app/views/favorite_companies/index.html.erb
+++ b/app/views/favorite_companies/index.html.erb
@@ -1,3 +1,5 @@
+<h2> Track Companies by Adding the To Your Watch List</h2>
+
 <% @favorites.each do |favorite| %>
   <ul class ="favorites">
     <h3 class = "favorite-name"><%= link_to favorite.name, user_company_path(favorite.user.id, favorite) %></h3>
