--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <%= link_to "Home", root_url %>
       <% if current_user %>
       <%= link_to "Log Out", logout_path, method: :delete %>
-        Logged in as <%= current_user.email %>
+        Logged In As <%= current_user.first_name %> <%= current_user.last_name %>
       <% else %>
         <%= link_to "Sign Up", signup_path %> or
         <%= link_to "Log In", login_path %>
