--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign Up</h2>
+<h2>Sign Up for Your Own Seed Me Account</h2>
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
   <div class="error_messages">
@@ -11,27 +11,21 @@
 </div>
 <% end %>
 <div class="field">
-  <%= f.label :username %><br />
   <%= f.text_field :username, placeholder: "Username" %>
 </div>
 <div class="field">
-  <%= f.label :password %><br />
   <%= f.password_field :password, placeholder: "Password" %>
 </div>
 <div class="field">
-  <%= f.label :password_confirmation, "Confirm" %><br />
   <%= f.password_field :password_confirmation, placeholder: "Confirm Password" %>
 </div>
 <div class="field">
-  <%= f.label :first_name %>
   <%= f.text_field :first_name, placeholder: "First Name" %>
 </div>
 <div class="field">
-  <%= f.label :last_name %>
   <%= f.text_field :last_name, placeholder: "Last Name" %>
 </div>
 <div class="field">
-  <%= f.label :email %>
   <%= f.text_field :email, placeholder: "Email" %>
 </div>
 <div class="actions"><%= f.submit "Sign Up" %></div>
