--- a/app/views/favorite_companies/index.html.erb
+++ b/app/views/favorite_companies/index.html.erb
@@ -1,4 +1,4 @@
-<h2> Track Companies by Adding the To Your Watch List</h2>
+<h2> Track Companies Using Your Watch List</h2>
 
 <% @favorites.each do |favorite| %>
   <ul class ="favorites">
