--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,8 +1,8 @@
 <h2><%= flash[:notice] %></h2>
 <%- unless current_user.favorite_companies.exists?(id: @company.id) -%>
-  <%= link_to 'Add to Watchlist', company_favorite_companies_path(@company), method: :post %>
+  <%= link_to 'Add to Watchlist', company_favorite_companies_path(@company), method: :post, class: "add-favorite" %>
 <%- else -%>
-  <%= link_to 'Remove from Watchlist', company_favorite_company_path(@company.id, params[:id]), method: :delete %>
+  <%= link_to 'Remove from Watchlist', company_favorite_company_path(@company.id, params[:id]), method: :delete, class:"add-favorite" %>
 <%- end -%>
 <%= render @company %>
 <% if @is_user  %>
