--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,5 +5,6 @@
     <li> Industry: <%= user.companies.first.industry %></li>
     <li> Name: <%= user.first_name %> <%= user.last_name %></li>
     <li> Email: <%= mail_to "#{user.email}" %></li>
+    <li> link_to </li>
   </ul>
 </div>
