--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,6 +5,6 @@
     <li> Industry: <%= user.companies.first.industry %></li>
     <li> Name: <%= user.first_name %> <%= user.last_name %></li>
     <li> Email: <%= mail_to "#{user.email}" %></li>
-    <li> link_to </li>
+    <li> <%= link_to "Send Private Message", new_user_message_path(user) %></li>
   </ul>
 </div>
