tweaked stylings, added views for received messages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,6 +82,12 @@ nav p {
     font-size:18px;
 }
 
+.messages{
+  width:40%;
+  margin: auto;
+  font-size: 18px;
+}
+
 /*Company Info*/
 .companies {
   width: 50%;
