--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -5,4 +5,6 @@
     <p>
       Message: <%= @message.body %>
     </p>
+
+    <%= link_to "Reply", new_user_message_path(@message.sender) %>
   </div>
