--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,7 +2,11 @@
 <% @received.each do |message| %>
   <div class="messages">
     <ul>
+      <% if message.subject.length == 0%>
+          <li><h3> <%= link_to "(No Subject)", user_message_path(@receiver, message) %> - From <%= message.sender.username %> on <%= message.created_at.strftime("%D at %l:%M %p") %></h3></li>
+      <% else %>
       <li><h3> <%= link_to "#{message.subject}", user_message_path(@receiver, message) %> - From <%= message.sender.username %> on <%= message.created_at.strftime("%D at %l:%M %p") %> </h3></li>
+      <% end %>
     </ul>
   </div>
 
