--- a/app/views/favorite_companies/index.html.erb
+++ b/app/views/favorite_companies/index.html.erb
@@ -1,7 +1,2 @@
 <h2> Track Companies Using Your Watch List</h2>
-
-<% @favorites.each do |favorite| %>
-  <ul class ="favorites">
-    <h3 class = "favorite-name"><%= link_to favorite.name, user_company_path(favorite.user.id, favorite) %></h3>
-  </ul>
-<% end %>
+<%= render @favorites %>
