--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -6,5 +6,8 @@
     <li> Name: <%= user.first_name %> <%= user.last_name %></li>
     <li> Email: <%= mail_to "#{user.email}" %></li>
     <li> <%= link_to "Send Private Message", new_user_message_path(user) %></li>
+  <% if user == current_user %>
+    <li><%= link_to "Edit Profile", edit_user_path(user) %></li>
+  <% end %>
   </ul>
 </div>
