--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,13 @@
   <header>
     <h1 class = "header-logo"> Welcome to SeedMe</h1>
     <ul class = "header-nav">
-      <%= link_to "Home", root_url %>
+      <li><%= link_to "Home", root_url %></li>
       <% if current_user %>
-      <%= link_to "Log Out", logout_path, method: :delete %>
+        <li><%= link_to "Log Out", logout_path, method: :delete %></li>
         Logged In As <%= current_user.first_name %> <%= current_user.last_name %>
       <% else %>
-        <%= link_to "Sign Up", signup_path %> or
-        <%= link_to "Log In", login_path %>
+        <li><%= link_to "Sign Up", signup_path %> or</li>
+        <li><%= link_to "Log In", login_path %></li>
       <% end %>
     </ul>
   </header>
