--- a/app/views/messages/_sent.html.erb
+++ b/app/views/messages/_sent.html.erb
@@ -7,6 +7,7 @@
       <% else %>
       <li><h3> <%= link_to "#{message.subject}", user_message_path(message.sender, message) %> - To <%= message.receiver.username %> on <%= message.created_at.strftime("%D at %l:%M %p") %> </h3></li>
       <% end %>
+      <li><%= link_to "Delete Message", user_message_path(message.sender, message), method: :delete %></li>
     </ul>
   </div>
 
