--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@user, @company] do |f| %>
+<%= form_for [current_user, @company] do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
 
