--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,16 +1,3 @@
 <h2>Messages</h2>
-<h2 class = "flash"><%= flash[:notice] %></h2>
-<% @received.each do |message| %>
-  <div class="messages">
-    <ul>
-      <% if message.subject.length == 0 %>
-          <li><h3> <%= link_to "(No Subject)", user_message_path(@receiver, message) %> - From <%= message.sender.username %> on <%= message.created_at.strftime("%D at %l:%M %p") %></h3></li>
-      <% else %>
-      <li><h3> <%= link_to "#{message.subject}", user_message_path(@receiver, message) %> - From <%= message.sender.username %> on <%= message.created_at.strftime("%D at %l:%M %p") %> </h3></li>
-      <% end %>
-      <li> <%= link_to "Delete Message", user_message_path(current_user, message), method: :delete %> </li>
-    </ul>
-  </div>
-
-<% end %>
-<%= render partial: 'sent' %>
+<%= render 'received' %>
+<%= render 'sent' %>
